--- a/docker/auto_bulids/Dockerfile
+++ b/docker/auto_bulids/Dockerfile
@@ -9,8 +9,8 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 COPY app.js ./
 
-RUN npm install
+#RUN npm install
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+#CMD ["npm", "start"]
